--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
